<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onix.internship.survay.ui.manager.home.ManagerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/managerPageContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.manager.home.ManagerFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/managerContainerToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/toolbar_margin_bottom_20"
            android:background="@color/purple_500"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/managerPageContainerTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/manager_page_title"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/managerContainerToolbar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/managerPageContainerButtonToResults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/apply_button_padding_40"
            android:onClick="@{() -> viewModel.goToStudentResults()}"
            android:text="@string/btn_to_results_text"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/managerPageContainerTitle"
            app:layout_constraintWidth_percent="0.7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/managerPageContainerButtonToTestList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/apply_button_padding_40"
            android:onClick="@{() -> viewModel.goToTestList()}"
            android:text="@string/btn_to_test_list_text"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/managerPageContainerButtonToResults"
            app:layout_constraintWidth_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>