<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onix.internship.survay.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_30"
        tools:context=".login.LoginFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginContainerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginContainerTitleText"
            android:textColor="@color/tab_color_unselected"
            android:textSize="@dimen/text_48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginContainerInputLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/tab_color_unselected"
            app:errorMessage="@{viewModel.errorLogin}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginContainerTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginContainerInputLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_30"
                android:hint="@string/signupContainerLoginInputHint"
                android:maxLength="30"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:text="@={viewModel.model.login}"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginContainerInputPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/tab_color_unselected"
            app:errorMessage="@{viewModel.errorPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginContainerInputLoginLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginContainerInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_30"
                android:hint="@string/signupContainerPasswordInputHint"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:text="@={viewModel.model.password}"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginContainerSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:onClick="@{() -> viewModel.showUserListFragment()}"
            android:paddingStart="@dimen/padding_40"
            android:paddingEnd="@dimen/padding_40"
            android:text="@string/buttonConnectText"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginContainerInputPasswordLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>